[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_amaltaro"
version = "0.0.1"
authors = [
  { name="Alan Malta Rodrigues", email="amaltaro@cern.ch" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/amaltaro/TestActions"
Issues = "https://github.com/amaltaro/TestActions/issues"
